--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,7 +29,13 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn clean test
+    - name: Generate Allure Report
+      run: mvn allure:report
 
-    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
-    - name: Update dependency graph
-      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
+    - name: Publish Allure Report
+      uses: simple-elf/allure-report-action@v1
+      with:
+          allure_results: target/allure-results
+          gh_pages: gh-pages
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
