--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -29,8 +29,10 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn clean test
-      #- name: Generate Allure Report
-       # run: mvn allure:report
+      - name: Generate Allure Report
+        run: mvn allure:report
+      - name: Check Allure Results
+          run: ls -la target/allure-results
 
       - name: Load test report history
         uses: actions/checkout@v3
