--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,12 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- Allure JUnit5 Adapter -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-junit5</artifactId>
+            <version>2.29.1</version>
+        </dependency>
 
         <!-- Allure Common Dependencies -->
         <dependency>
