allure report plugin added

--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                 <version>3.5.2</version>
                 <configuration>
                     <argLine>
-                        -Dfile.encoding=${project.build.sourceEncoding}
+                        <!-- -Dfile.encoding=${project.build.sourceEncoding}-->
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
                 </configuration>
